# GA

./: AUTHORS  README  configure.ac
src/: Makefile.am  config.h  freqs.c  freqs.h  freqs_data.h  ga.c  ga.h  getfreqs.c  getfreqs.h  getseqs.c  getseqs.h  read_poolbin.c  safe.h  suffix_tree.h
tests/: Makefile.am  test0.sh
